k8s-infra-app/03-NginxApp2-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-nginx-deployment
  namespace: 02-letsencrypt
  labels:
    app: app2-nginx 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
        - name: app2-nginx
         # image: stacksimplify/kube-nginxapp2:1.0.0
          image: pocaksinfrareg.azurecr.io/kube-nginxapp2:1.0.0
          ports:
            - containerPort: 80
