k8s-infra-app/04-NginxApp2-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-nginx-clusterip-service
  namespace: 02-letsencrypt
  labels:
    app: app2-nginx
  annotations:
spec:
  type: ClusterIP
  selector:
    app: app2-nginx
  ports:
    - port: 80
      targetPort: 80
