k8s-infra-app/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  namespace: 02-letsencrypt
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  rules:
  - host: sapp1.gsbonazure.de
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port: 
              number: 80
              
  - host: sapp2.gsbonazure.de
    http:
      paths:
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-nginx-clusterip-service
            port: 
              number: 80            
 
  tls:
  - hosts:
    - sapp1.gsbonazure.de
    secretName: sapp1-gsbonazure-secret           
  - hosts:
    - sapp2.gsbonazure.de
    secretName: sapp2-gsbonazure-secret
